# rse-python-project

./: .gitignore  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  rse_project.ipynb
.github/workflows/: docs.yml  publish.yml  tests.yml
docs/: index.md
notebooks/: demo.ipynb
search/: search_index.json
src/physcalc/: core.py
tests/: test_core.py
