[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "phys-engine-cool" 
dynamic = ["version"]
description = "High-performance physics simulation with Numba and Pint"
authors = [{name = "Mikhail Shupliakou", email = "mshupliakou@student.agh.edu.pl"}]
dependencies = [
    "pint",
    "numba",
    "numpy",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]

[project.urls]
Repository = "https://github.com/mshupliakou/rse-python-project"